--- a/index.html
+++ b/index.html
@@ -34,8 +34,21 @@
          <input placeholder="Escreva aqui..." class="message-input" data="identifier=" send-message">
          <span class="sending">Enviando para Todos</span>
       </div>
+      <ion-icon name="paper-plane-outline"></ion-icon>
    </footer>
 
+   <div class="menu hidden">
+      <h3 class="menu-title">Escolha um contato para enviar mensagem:</h3>
+      <ul class="users">
+      </ul>
+      <h3 class="menu-title">Escolha a visibilidade:</h3>
+      <ul class="visibilities">
+         <li class="visibilities-public selected" onclick="selectVisibility(this, 'message')"data-identifier="visibility">
+         <ion-icon name="lock-open"></ion-icon>
+         Público
+         </li>
+      </ul>
+   </div>
 </body>
 
 </html>
